added header and intro

--- a/206-divs-flexbox/index.html
+++ b/206-divs-flexbox/index.html
@@ -19,16 +19,23 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+        <section class="hi">
+           <h1>Hi. Mariah here!</h1>
+        </section>
        
+        <section class="intro">
+            <p>I'm a Responsive Developer who thrives on delivering clean and simple user experiences. When I'm not at my computer, you can find me wondering around the great outdoors or dabbling in some fun new project - just ask me about my new pillow patio.</p>
+        </section>
+
         <section class="wrapper">
             <div class="about">
-                <p><span>About Me:</span><br>Born and raised in New England with the water by my side, be it the river or the ocean, I've always felt a deep connection to nature.</p>  
+                <p><span>About Me:</span><br>Born and raised in New England with the water by my side, be it a stream, river or ocean, I've always felt a deep connection to nature.</p>  
             </div>
             <div class="passion">
                 <p><span>My Passion:</span><br>Catching the travel bug in my early twenties, I quickly discovered how vast the world is and now love spending my time diving into the unique cultures that surround us.</p>
             </div>
             <div class="fun-fact">
-                <p><span>Fun Fact:</span><br>I have an appreciation for the small pleasusre that life offers, whether it be observing the mystery of earth's creatures or coloring in a children's book.</p>
+                <p><span>Fun Fact:</span><br>I appreciate the small pleasusre that life offers, whether that's observing one of earth's little creatures or coloring in a children's book.</p>
             </div>
         </section>    
 
