--- a/206-divs-flexbox/index.html
+++ b/206-divs-flexbox/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Make me into a grid!</title>
+        <title>FeelingInspired</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -19,25 +19,29 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <section class="hi">
+        <header>
            <h1>Hi. Mariah here!</h1>
-        </section>
+        </header>
        
         <section class="intro">
-            <p>I'm a Responsive Developer who thrives on delivering clean and simple user experiences. When I'm not at my computer, you can find me wondering around the great outdoors or dabbling in some fun new project - just ask me about my new pillow patio.</p>
+            <p>I'm a Responsive Developer who thrives on clean and simple user experiences. When I'm not at my computer, you can find me wondering around the great outdoors or dabbling in some fun new project - just ask me about my new pillow patio. </p>
         </section>
 
         <section class="wrapper">
             <div class="about">
-                <p><span>About Me:</span><br>Born and raised in New England with the water by my side, be it a stream, river or ocean, I've always felt a deep connection to nature.</p>  
+                <p><span>About Me:</span><br>Born and raised in New England with the water by my side, be it the river or the ocean, I feel most at home in nature and I'm often inspired by all its power and beauty.</p>  
             </div>
             <div class="passion">
-                <p><span>My Passion:</span><br>Catching the travel bug in my early twenties, I quickly discovered how vast the world is and now love spending my time diving into the unique cultures that surround us.</p>
+                <p><span>My Passion:</span><br>Catching the travel bug in my early twenties, I quickly discovered how vast the world is and now love spending my exploring new cities/town, tasting different food, and diving into the unique cultures that surround us.</p>
             </div>
             <div class="fun-fact">
-                <p><span>Fun Fact:</span><br>I appreciate the small pleasusre that life offers, whether that's observing one of earth's little creatures or coloring in a children's book.</p>
+                <p><span>Fun Fact:</span><br>I'm amazeballs! PLACE HOLDER</p>
             </div>
         </section>    
+
+        <footer>
+            <!----SOCIAL---->
+        </footer>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
