--- a/206-divs-flexbox/index.html
+++ b/206-divs-flexbox/index.html
@@ -35,7 +35,7 @@
                 <p><span>My Passion:</span><br>Catching the travel bug in my early twenties, I quickly discovered how vast the world is and now love spending my exploring new cities/town, tasting different food, and diving into the unique cultures that surround us.</p>
             </div>
             <div class="fun-fact">
-                <p><span>Fun Fact:</span><br>I'm amazeballs! PLACE HOLDER</p>
+                <p><span>Fun Fact:</span><br>I'm amazeballs! PLACEs</p>
             </div>
         </section>    
 
