adjusted media queries

--- a/206-rogue_pickings/index.html
+++ b/206-rogue_pickings/index.html
@@ -11,27 +11,27 @@
     </head>
     <body>
         <div class="container">
-            <header class="header">
+            <header>
                 <h1><span>rogue </span> pickings</h1>
-                <nav class="navigation">
+                <nav>
                     <ul>
                         <li>
-                            <a href="about">About</a>
+                            <a href="">About</a>
                         </li>
                         <li>
-                            <a href="menu">Menu</a>
+                            <a href="">Menu</a>
                         </li>
                         <li>
-                            <a href="location">Locations</a>
+                            <a href="">Locations</a>
                         </li>
                         <li>
-                            <a href="gallery">Gallery</a>
+                            <a href="">Gallery</a>
                         </li>
                         <li>
-                            <a href="reviews">Reviews</a>
+                            <a href="">Reviews</a>
                         </li>
                         <li>
-                            <a href="contact">Contact</a>
+                            <a href="">Contact</a>
                         </li>
                     </ul>
                 </nav>
